# test_fin

./: .env.example  README.md  pyproject.toml  requirements.txt
AGENT/: __init__.py  agent.py  embeddings.py  llm.py  retriever.py
src/: chatbot_dev.ipynb  config.py  main.py
tests/: test_agent.py
