[tool.poetry]
name = "finagent-app"
version = "0.1.0"
description = "A financial chatbot application using language models and document retrieval."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
langchain = "^0.0.1"
transformers = "^4.0.0"
torch = "^1.9.0"
chromadb = "^0.1.0"
sentence-transformers = "^2.0.0"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"